--- a/CSS/Bulk.css
+++ b/CSS/Bulk.css
@@ -38,14 +38,12 @@ body {
     }
 }
 
-.back-btn {
-    color: #6c757d;
-    text-decoration: none;
-    font-size: 1rem;
-    margin-bottom: 2rem;
-    display: inline-flex;
-    align-items: center;
-    gap: 0.5rem;
+.back-button {
+    padding: 7px 40px;
+    background-color: white;
+    border-radius: 7px;
+    border: 1px solid #E5E5E5;
+    margin-bottom: 20px;
 }
 
 .back-btn:hover {
